# appimage-thumbnailer

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
ci/: Dockerfile  build.sh  install-deps.sh
cmake/: cpack_deb.cmake  cpack_settings.cmake
data/: appimage-thumbnailer.desktop  appimage-thumbnailer.thumbnailer
lib/: CMakeLists.txt
resources/: CMakeLists.txt
share/: CMakeLists.txt
src/: CMakeLists.txt  appimage-icon-extract.c  appimage-icon-extract.cpp  appimage-icon-extract.h  appimage-thumbnailer  gnome-appimage-thumbnailer.c  kde-appimage-thumbnailer.cpp
